[workspace]
resolver = "2"
members = ["chamber-cli", "chamber-core", "chamber-server"]

[workspace.dependencies]
axum = "0.6.20"
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["clock", "serde"] }
hyper = { version = "0.14", features = ["full"] }
nanoid = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.28.2", features = ["sync", "macros"] }
ring = { version = "0.17.7", features = ["std"] }
tower = "0.4.13"
tracing = "0.1.40"
typenum = "1.17.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
generic-array = { version = "0.14.7", features = ["zeroize"] }
argon2 = "0.5.2"
