[package]
name = "boulder-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
home = "0.5.9"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
toml = "0.8.8"
inquire = "0.6.2"
boulder-server = { path = "../boulder-server" }
