[package]
name = "boulder-core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { workspace = true }
async-trait = "0.1.74"
axum = { workspace = true, features = ["macros"] }
generic-array = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
serde_bytes = "0.11.12"
