[package]
name = "boulder_db"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { workspace = true }
async-trait = "0.1.74"
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true }
hyper = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shuttle-axum = { workspace = true, optional = true }
shuttle-runtime = { workspace = true, optional = true }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
