[package]
name = "boulder-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shuttle"
path = "src/bin/shuttle.rs"
required-features = ["shuttle"]

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[features]
default = ["shuttle"]
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime"]

[dependencies]
aes-gcm = { workspace = true }
axum = { workspace = true, features = ["headers"] }
chrono = { workspace = true }
hyper = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shuttle-axum = { workspace = true, optional = true }
shuttle-runtime = { workspace = true, optional = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
boulder_db = { path = "../boulder-db" }
headers = "0.4.0"
once_cell = "1.19.0"
jsonwebtoken = "9.2.0"
