[package]
name = "boulder-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "boulder-server"
path = "src/bin/shuttle.rs"

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[dependencies]
aes-gcm = { workspace = true }
axum = { workspace = true, features = ["headers"] }
chrono = { workspace = true }
hyper = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
sqlx = { workspace = true }
boulder-core = { path = "../boulder-core" }
headers = "0.4.0"
once_cell = "1.19.0"
jsonwebtoken = "9.2.0"
shuttle-axum = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = ["postgres", "sqlx"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
