[package]
name = "chamber-cli"
version = "0.1.0"
edition = "2021"
description = "The core for Chamber, the self-hostable SecretOps service."
homepage = "https://www.github.com/joshua-mo-143/chamber"
documentation = "https://www.github.com/joshua-mo-143/chamber"
repository = "https://www.github.com/joshua-mo-143/chamber"
readme = "../README.md"

[[bin]]
name = "chamber"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
home = "0.5.9"
reqwest = { version = "0.11.22", features = ["json", "blocking", "multipart"] }
toml = "0.8.8"
inquire = "0.6.2"
chamber-core = { path = "../chamber-core" }
bincode = { workspace = true }
aes-gcm = { workspace = true }
generic-array = { workspace = true }
nanoid = { workspace = true }
typenum = { workspace = true }
comfy-table = "7.1.0"
