[package]
name = "chamber-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
chamber-crypto = { version = "0.1.0", path = "../chamber-crypto" }
chamber-shared = { path = "../chamber-shared" }
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = { version = "7.1.1" }
home = { version = "0.5.9" }
inquire = { version = "0.7.5" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = { version = "0.8.12" }
workspace = "0.4.2"
