[package]
name = "chamber-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The core for Chamber, the self-hostable SecretOps service."
homepage = "https://www.github.com/joshua-mo-143/chamber"
documentation = "https://www.github.com/joshua-mo-143/chamber"
repository = "https://www.github.com/joshua-mo-143/chamber"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { workspace = true }
async-trait = "0.1.74"
axum = { workspace = true, features = ["macros"] }
generic-array = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
serde_bytes = "0.11.12"
