[package]
name = "chamber-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
hex = "0.4.3"
nanoid = { workspace = true }
num-traits = "0.2.17"
ring = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.12"
sqlx = { workspace = true, features = ["bigdecimal"] }
tracing = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
rand = "0.8.5"
