[package]
name = "chamber-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.115"
chamber-shared = { path = "../chamber-shared" }
thiserror = "1.0.58"
url = { version = "2.5.0", features = ["serde"] }
