[package]
name = "chamber-server"
version = "0.1.1"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chamber-server"
path = "src/bin/shuttle.rs"
required-features = ["shuttle"]

[features]
default = ["shuttle"]
shuttle = [
        "dep:shuttle-axum",
        "dep:shuttle-runtime",
        "dep:shuttle-persist",
        "dep:shuttle-shared-db",
        ]

[dependencies]
chamber-core = { path = "../chamber-core" }
chamber-crypto  = { path = "../chamber-crypto" }
chamber-shared = { path = "../chamber-shared" }
chrono = { version = "0.4.31", features = ["clock", "serde"] }
generic-array = { version = "0.14.7", features = ["zeroize"] }
headers = "0.4.0"
reqwest.workspace = true
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "macros"] }
thiserror = "1.0.59"
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bincode = {version = "1.3.3" }
jsonwebtoken = { version = "9.2.0" }
once_cell = { version =  "1.19.0" }
ring = { version = "0.17.7" }

#server

shuttle-axum = { version = "0.44.0", optional = true }
shuttle-persist = { version = "0.44.0", optional = true }
shuttle-runtime = { version = "0.44.0", optional = true }
shuttle-shared-db = { version = "0.44.0", features = ["postgres", "sqlx"], optional = true }

tokio = { version = "1.28.2", features = ["sync"] }

tracing = "0.1.40"
typenum = "1.17.0"

[dev-dependencies]
tower = "0.4.13"
hyper = { version = "0.14", features = ["full"] }
